hphp/test/quick/get_class.php.expectf
string(1) "A"
string(1) "A"
string(1) "A"

Catchable fatal error: Argument 1 passed to get_class() must be an instance of HH\object, null given in %s/hphp/test/quick/get_class.php on line 13
